
JasperReports Change Log
===================================

JasperReports 0.6.6
-----------------------------------
- new "incrementType" and "incrementGroup" attributes for variables;

- new Groovy report compiler;

- moved the BSH compiler;

- minor bug fixes and improvements;




JasperReports 0.6.5
-----------------------------------
- JasperReports licensing model has been simplified and the library 
will be shipped only under the "GNU Lesser Public License" (LGPL);

- new "onErrorType" and "isLazy" attributes for image elements 
to allow customizing the engine's behavior for loading and displaying images;

- new sample showing how to use the JasperReports library inside a J2EE application
running on the JBoss Application Server;

- minor bug fixes and improvements;




JasperReports 0.6.4
-----------------------------------
- new report compiler that uses the Eclipse JDT Java compiler for faster compilation 
and simpler deployment;

- minor bug fixes and improvements;




JasperReports 0.6.3
-----------------------------------
- new <box> tag available for putting border around text and image elements
with independent properties such as color, style and padding on all four sides;

- new "isFloatColumnFooter" attribute to allow printing the column footer section
right after the detail lines and not only at the bottom of the page;

- new global OFFSET_X and OFFSET_Y exporter parameters that can be used to move 
all the elements on a page when exporting the generated document;

- minor bug fixes and improvements;




JasperReports 0.6.2
-----------------------------------
- added support for import statements in order to eliminate 
the need to use complete class names inside report expressions;

- new "resourceBundle" attribute and new build-in REPORT_LOCALE and 
REPORT_RESOURCE_BUNDLE report parameters, to allow associating 
a ResourceBundle and a Locale with the report design when filling it with data;
