@@ -38,6 +38,7 @@ import java.util.Locale;
 import java.util.Map;
 
 import net.sf.jasperreports.engine.JRException;
+import net.sf.jasperreports.engine.JRReport;
 import net.sf.jasperreports.engine.JasperReport;
 import net.sf.jasperreports.engine.util.JRClassLoader;
 
@@ -76,6 +77,16 @@ public class JRJdtCompiler extends JRAbstractJavaCompiler
 	public JasperReport compileReport(JasperDesign jasperDesign) throws JRException
 	{
 		JasperReport jasperReport = null;
+		
+		if (!JRReport.LANGUAGE_JAVA.equals(jasperDesign.getLanguage()))
+		{
+			throw 
+				new JRException(
+					"Language \"" + jasperDesign.getLanguage() 
+					+ "\" not supported by this report compiler.\n"
+					+ "Expecting \"java\" instead."
+					);
+		}
 		
 		Collection brokenRules = JRVerifier.verifyDesign(jasperDesign);
 		if (brokenRules != null && brokenRules.size() > 0)
