@@ -10,6 +10,8 @@ JasperReports 0.6.6
 
 - moved the BSH compiler;
 
+- new "language" attribute;
+
 - minor bug fixes and improvements;
 
 
